--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body{
    margin: 10px;
    padding: 0;
-   background: #8093f1;
+   background: #9dacf5;
 }
 
 aside {
@@ -13,20 +13,17 @@ aside {
     transform: skewY(-5deg);
     float: left;
     display: block;
-    text-align: center;
 }
 
 img {
     border-radius: 20%;
     float: left;
-    transform: skewX(-10deg);
-    height: 150px;
-    width: 170px;
+    
 }
 
 header {
     background-color: #72ddf7;
-    padding: 30px;
+    padding: 15px;
     text-align: center;
     font-size: 40px;
     transform: skewX(10deg);
@@ -41,9 +38,9 @@ h1{
     text-shadow: 3px 3px 6px pink;
 }
 
-p1 {
+p {
     color:black;
-    padding: 15px;
+    padding: 10px;
     font-size: 20px;
 }
 
@@ -58,7 +55,7 @@ fieldset {
     border: 3px dotted blue;
     background-color: #feeafa;
     margin: 30px 5px 30px 5px;
-    text-align: left;
+    display: block;
 }
 
 legend {
@@ -70,6 +67,7 @@ legend {
 
 video{
     float: left;
+    border-radius: 10%;
     margin-right: 40px;
 
 }
@@ -96,4 +94,14 @@ audio {
 
 ul {
     list-style-type: disc;
+}
+
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+
+button {
+    color: rgb(6, 20, 44);
+    border-color: #f8fafc;
 }
